nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  namespace: a-maxmudov
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
