service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: a-maxmudov
spec:
  selector:
    app: my-app
  ports:
  - port: 8066
    targetPort: 5000
