ingress_my_app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: a-maxmudov
  name: my-app
  labels:
    name: my-app
spec:
  rules:
  - host: amahmudov.nvrbckdown.uz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app
            port: 
              number: 5000
